objects/GenericObject__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>Apifieldname__c</fullName>
        <label>Apifieldname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Isglifieldapiname__c</fullName>
        <description>To hold the api name of  field IsGli on account ,lead and opportunity</description>
        <label>Isglifieldapiname</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salesorgapiname__c</fullName>
        <description>To hold the api name of sales org filed on lead</description>
        <label>Salesorgapiname</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>LCRM Generic Object</label>
</CustomObject>